--- a/views/404.ejs
+++ b/views/404.ejs
@@ -8,7 +8,7 @@
 
 
     <div class="not found content">
-        <h2>oops page not found</h2>
+        <h2>Oops page not found</h2>
     </div>
 
     <%- include('./partials/footer.ejs') %>
